@@ -12,3 +12,6 @@ strftime = cached statically on: %d-%m-%y %H:%M
 
 # cat=basic; type=boolean; label=Log debug information to cc_devlog: If enabled, logging info will be written to cc_devlog. So make sure you have this installed if you have this option checked.
 debug = 0
+
+# cat=basic; type=boolean; label=Recreate URI to create cache files: Recreate URI by typoLink to have a vaild cached file name
+recreateURI = 0
